# zeitwise

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.simple.yml  docker-compose.yml  package-lock.json  package.json  personas.md  roadmap.md  tsconfig.json  turbo.json
services/backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
services/backend/alembic/versions/: 0001_initial_user_table.py
services/backend/app/: main.py
services/backend/app/api/: deps.py
services/backend/app/core/: celery.py  config.py  detox_config.py  logging.py  security.py
services/backend/app/db/: base.py  config.py  deps.py  init_db.py  session.py
services/backend/app/models/: base.py  detox_model.py  user.py  user_model.py
services/backend/app/routes/: __init__.py  auth.py  chat.py  detox.py  integrations.py  memes.py  verification.py
services/backend/app/schemas/: auth_provider.py  meme.py  requests.py  responses.py  verification.py
services/backend/app/services/: auth_service.py  chat_service.py  llm_router.py  supabase_auth.py  supabase_client.py  user_service.py  user_sync.py  vector.py  verification_service.py
services/backend/app/tasks/: __init__.py  meme_generation.py
services/backend/docs/: API_VERIFICATION.md  DETOX_PIPELINE.md  MEME_API.md  verification_flow.md
services/backend/tests/: conftest.py  test_auth.py  test_chat.py  test_detox_pipeline.py  test_health.py  test_integrations.py  test_llm_router.py  test_meme_generation.py  test_routes.py  test_security.py  test_vector.py  test_verification.py
(+12 files in other folders)
